--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -255,10 +255,10 @@ jobs:
           committed-repo: committed-loggregator-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: loggregator-develop
-      #   params:
-      #     repository: commited-loggregator-release
-      #     rebase: false
+      - put: loggregator-develop
+        params:
+          repository: commited-loggregator-release
+          rebase: false
     - do:
       - task: bump-loggregator-capacity-planning-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -279,10 +279,10 @@ jobs:
           committed-repo: committed-loggregator-capacity-planning-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: loggregator-capacity-planning-release
-      #   params:
-      #     repository: committed-loggregator-capacity-planning-release
-      #     rebase: false
+      - put: loggregator-capacity-planning-release
+        params:
+          repository: committed-loggregator-capacity-planning-release
+          rebase: false
     - do:
       - task: bump-loggregator-bench-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -303,10 +303,10 @@ jobs:
           committed-repo: committed-loggregator-bench-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: loggregator-bench-release
-      #   params:
-      #     repository: committed-loggregator-bench-release
-      #     rebase: false
+      - put: loggregator-bench-release
+        params:
+          repository: committed-loggregator-bench-release
+          rebase: false
     - do:
       - task: bump-cf-syslog-drain-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -327,10 +327,10 @@ jobs:
           committed-repo: committed-cf-syslog-drain-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: cf-syslog-drain-release-develop
-      #   params:
-      #     repository: committed-cf-syslog-drain-release
-      #     rebase: false
+      - put: cf-syslog-drain-release-develop
+        params:
+          repository: committed-cf-syslog-drain-release
+          rebase: false
     - do:
       - task: bump-statsd-injector-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -351,10 +351,10 @@ jobs:
           committed-repo: committed-statsd-injector-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: statsd-injector-release
-      #   params:
-      #     repository: committed-statsd-injector-release
-      #     rebase: false
+      - put: statsd-injector-release
+        params:
+          repository: committed-statsd-injector-release
+          rebase: false
     - do:
       - task: bump-ouroboros-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -375,10 +375,10 @@ jobs:
           committed-repo: committed-ouroboros-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: ouroboros-release
-      #   params:
-      #     repository: committed-ouroboros-release
-      #     rebase: false
+      - put: ouroboros-release
+        params:
+          repository: committed-ouroboros-release
+          rebase: false
     - do:
       - task: bump-bosh-hm-forwarder-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -399,10 +399,10 @@ jobs:
           committed-repo: committed-bosh-hm-forwarder-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: bosh-hm-forwarder-release
-      #   params:
-      #     repository: committed-bosh-hm-forwarder-release
-      #     rebase: false
+      - put: bosh-hm-forwarder-release
+        params:
+          repository: committed-bosh-hm-forwarder-release
+          rebase: false
     - do:
       - task: bump-reference-nozzle-release
         file: loggregator-ci/tasks/bump-golang/task.yml
@@ -423,10 +423,10 @@ jobs:
           committed-repo: committed-reference-nozzle-release
         params:
           COMMIT_MESSAGE: "Bump golang version"
-      # - put: reference-nozzle-release
-      #   params:
-      #     repository: committed-reference-nozzle-release
-      #     rebase: false
+      - put: reference-nozzle-release
+        params:
+          repository: committed-reference-nozzle-release
+          rebase: false
 
 - name: loggregator-create-final-release
   serial: true
