Move automated rampup test to follow new task pattern

--- a/tasks/autmoated-rampup-test/task.yml
+++ b/tasks/autmoated-rampup-test/task.yml
@@ -12,4 +12,4 @@ inputs:
 outputs:
 - name: updated-capacity-planning-vars-store
 run:
-  path: loggregator-ci/tasks/capacity-planning/automated-rampup-test.rb
+  path: loggregator-ci/tasks/automated-rampup-test/task
