Move loggregator-bench task to match new pattern

--- a/tasks/loggregator-bench/task.yml
+++ b/tasks/loggregator-bench/task.yml
@@ -13,4 +13,4 @@ outputs:
 params:
   BBL_STATE_DIR: deployments-loggregator/gcp/coconut-bbl
 run:
-  path: loggregator-ci/tasks/loggregator/benchmarks.rb
+  path: loggregator-ci/tasks/loggregator-bench/task
