--- a/tasks/bosh-deploy/task.yml
+++ b/tasks/bosh-deploy/task.yml
@@ -15,6 +15,9 @@ inputs:
 - name: ops-files      # - The directory from which to read ops-files
 - name: vars-files     # - The directory from which to read vars files
 
+outputs:
+- name: updated-vars-store # - The updated and commited vars store.
+
 run:
   path: loggregator-ci/tasks/bosh-deploy/task
 
