--- a/pipelines/bosh-hm-forwarder.yml
+++ b/pipelines/bosh-hm-forwarder.yml
@@ -53,27 +53,14 @@ jobs:
       - unit-tests
       trigger: true
   - task: update-submodule
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: bosh-hm-forwarder-release
-      - name: bosh-hm-forwarder
-      outputs:
-      - name: updated-bosh-hm-forwarder-release
-      params:
-        PARENT: bosh-hm-forwarder-release
-        OUTPUT: updated-bosh-hm-forwarder-release
-        CHILD: bosh-hm-forwarder
-        CHILD_PATH: src/github.com/cloudfoundry/bosh-hm-forwarder
-      run:
-        path: bash
-        args:
-        - -c
-        - {{update_submodule}}
+    file: loggregator-ci/tasks/bump-submodule/task.yml
+    input_mapping:
+      release-repo: bosh-hm-forwarder-release
+      source-repo: bosh-hm-forwarder
+    output_mapping:
+      bumped-release-repo: updated-bosh-hm-forwarder-release
+    params:
+      SUBMODULE_PATH: src/github.com/cloudfoundry/bosh-hm-forwarder
   - task: commit
     config:
       platform: linux
